# test_wsl_gui

./: README.md  first_figure.html  pyproject.toml
scripts/: animation.py  animation2.py  animation4.py  animation5.py  graph.py  test.py
scripts/.ipynb_checkpoints/: animation2-checkpoint.ipynb  animation2-checkpoint.py
