[tool.poetry]
name = "test-wsl-gui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
plotly = "^5.19.0"
pandas = "^2.2.0"
notebook = "^7.1.0"
pygame = "^2.5.2"
ipykernel = "^6.29.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
